--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
     repositories {
-        google()
+        mavenLocal()
         jcenter()
+        maven { url 'https://maven.google.com'  }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-        
+        classpath 'com.google.gms:google-services:4.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,11 +18,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        //mavenLocal() must be listed at the top to facilitate testing
+        mavenLocal()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
